--- a/hiscore/package.json
+++ b/hiscore/package.json
@@ -1,9 +1,10 @@
 {
   "name":        "hiscore",
-  "version":     "0.0.0",
-  "description": "My super lovely module",
+  "version":     "1.0.0",
+  "description": "A simple hiscore widget",
   "author":      "Nikolay Nemshilov",
   "license":     "MIT",
+  "home_url":    "https://github.com/MadRabbit/lovely.io-games/tree/master/hiscore",
   "dependencies": {
     "dom"    : "0.0.2",
     "cookie" : "0.0.2"
