--- a/timer/package.json
+++ b/timer/package.json
@@ -1,9 +1,10 @@
 {
   "name":        "timer",
-  "version":     "0.0.0",
-  "description": "My super lovely module",
+  "version":     "1.0.0",
+  "description": "A super-simple timer widget",
   "author":      "Nikolay Nemshilov",
   "license":     "MIT",
+  "home_url":    "https://github.com/MadRabbit/lovely.io-games/tree/master/timer",
   "dependencies": {
     "dom": "0.0.2"
   }
