--- a/mines/package.json
+++ b/mines/package.json
@@ -1,7 +1,14 @@
 {
   "name":        "mines-game",
-  "version":     "0.0.0",
-  "description": "My super lovely module",
+  "version":     "1.0.0",
+  "description": "The Mines Game",
   "author":      "Nikolay Nemshilov",
-  "license":     "MIT"
+  "license":     "MIT",
+  "home_url":    "https://github.com/MadRabbit/lovely.io-games/tree/master/mines",
+  "dependencies": {
+    "dom":     "0.0.2",
+    "lang":    "0.0.2",
+    "timer":   "1.0.0",
+    "hiscore": "1.0.0"
+  }
 }
