--- a/sudoku/package.json
+++ b/sudoku/package.json
@@ -1,14 +1,15 @@
 {
   "name":        "sudoku",
-  "version":     "1.0.1",
+  "version":     "1.0.3",
   "description": "Sudoku game implementation",
   "author":      "Nikolay Nemshilov",
   "license":     "MIT",
   "home_url":    "https://github.com/MadRabbit/lovely.io-games/tree/master/sudoku",
+  "tags":        "Games, Demo",
   "dependencies": {
-    "dom":     "1.0.0",
+    "dom":     "1.0.1",
     "cookie":  "1.0.0",
-    "timer":   "1.0.1",
-    "hiscore": "1.0.1"
+    "timer":   "1.0.2",
+    "hiscore": "1.0.3"
   }
 }
