--- a/timer/package.json
+++ b/timer/package.json
@@ -1,11 +1,12 @@
 {
   "name":        "timer",
-  "version":     "1.0.1",
+  "version":     "1.0.2",
   "description": "A super-simple timer widget",
   "author":      "Nikolay Nemshilov",
   "license":     "MIT",
   "home_url":    "https://github.com/MadRabbit/lovely.io-games/tree/master/timer",
+  "tags":        "Games",
   "dependencies": {
-    "dom": "1.0.0"
+    "dom": "1.0.1"
   }
 }
